--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
             <div class="NavLeft">
                 <img src="./Assets/GYM24 - logo.png" alt="">
             </div>
-           <div class="NavRight">
-            <ul>
-                <li>Advantages</li>
-                <li>Membership</li>
-                <li>About</li>
-                <li>Trainers</li>
-            </ul>
-           </div>
+            <div class="NavRight">
+                <ul>
+                    <li>Advantages</li>
+                    <li>Membership</li>
+                    <li>About</li>
+                    <li>Trainers</li>
+                </ul>
+            </div>
 
         </div>
         <div class="HeroSection">
@@ -34,6 +34,50 @@
             </div>
             <div class="HeroRight">
                 <img src="Assets/Hero Image.png" alt="">
+            </div>
+        </div>
+        <div class="ContentSec">
+            <div class="ContentHead">
+                <h1>Reason to Join</h1>
+            </div>
+            <div class="ContentDetails">
+
+                <div class="Contents">
+                    <div class="Logo"><img src="./Assets/icon_line.png" alt=""></div>
+                    <div class="Heading">
+                        <h4>15000 sq.m.</h4>
+                    </div>
+                    <div class="Paragraph">
+                        <p>A spacious gym for sports – a safe distance between exercise machines</p>
+                    </div>
+                </div>
+                <div class="Contents">
+                    <div class="Logo"><img src="./Assets/icon_ eqipment.png" alt=""></div>
+                    <div class="Heading">
+                        <h4>More than 200 equipment</h4>
+                    </div>
+                    <div class="Paragraph">
+                        <p>No queues at the simulators. Premium equipment from LifeStyle, Hammer Strength, TechnoGym.</p>
+                    </div>
+                </div>
+                <div class="Contents">
+                    <div class="Logo"><img src="./Assets/icon_ fitness zones.png" alt=""></div>
+                    <div class="Heading">
+                        <h4>4 fitness zones</h4>
+                    </div>
+                    <div class="Paragraph">
+                        <p>From cardio to functional and cycle. Separate area for boxing and mixed martial arts</p>
+                    </div>
+                </div>
+                <div class="Contents">
+                    <div class="Logo"><img src="./Assets/icon_time.png" alt=""></div>
+                    <div class="Heading">
+                        <h4>Round-the-clock operation</h4>
+                    </div>
+                    <div class="Paragraph">
+                        <p>The gym is open 24 hours a day, also works on all holidays and weekends</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
