--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
                         <h4>More than 200 equipment</h4>
                     </div>
                     <div class="Paragraph">
-                        <p>No queues at the simulators. Premium equipment from LifeStyle, Hammer Strength, TechnoGym.</p>
+                        <p>No queues at the simulators. Premium equipment from LifeStyle, Hammer Strength, TechnoGym.
+                        </p>
                     </div>
                 </div>
                 <div class="Contents">
