--- a/index.html
+++ b/index.html
@@ -81,6 +81,86 @@
                 </div>
             </div>
         </div>
+        <div class="CardSection">
+            <div class="CardTitle">
+                <h2>Gym Membership</h2>
+            </div>
+            <div class="Cards">
+                <div class="card">
+                    <div class="Title">Pass "Trial"</div>
+                    <div class="Price">$0</div>
+                    <hr>
+                    <div class="CardDetails">
+                        <p>Access to the gym from 8:00 to 14:00</p>
+                        <p>The trainer on duty will introduce you to the gym</p>
+                        <button>Buy</button>
+                    </div>
+
+                </div>
+                <div class="card">
+                    <div class="Title">Pass ‘Easy Start’ </div>
+                    <div class="Price">$119</div>
+                    <hr>
+                    <div class="CardDetails">
+                        <p>Visit without restrictions 24/7</p>
+                        <p>Individual training program</p>
+                        <p>Access to the VTRAINER application</p>
+                        <p>Trainer support</p>
+                        <button>Buy</button>
+                    </div>
+
+                </div>
+                <div class="card">
+                    <div class="Title">Pass ‘Free Time’ </div>
+                    <div class="Price">$49</div>
+                    <hr>
+                    <div class="CardDetails">
+                        <p>The entrance time to the gym is from 14:00 to 16:00</p>
+                        <p>Without suspension of gym membership</p>
+                        <p>The trainer on duty will introduce you to the gym</p>
+                        <button>Buy</button>
+                    </div>
+
+                </div>
+                <div class="card">
+                    <div class="Title">Pass ‘1 Month 24/7’ </div>
+                    <div class="Price">$85</div>
+                    <hr>
+                    <div class="CardDetails">
+                        <p>Visit without restrictions 24/7</p>
+                        <p>The trainer on duty will introduce you to the gym</p>
+                        <button>Buy</button>
+                    </div>
+
+                </div>
+                <div class="card">
+                    <div class="Title">Pass ‘In Shape (AM)’ </div>
+                    <div class="Price">$165</div>
+                    <hr>
+                    <div class="CardDetails">
+                        <p>Training in mini-groups until 14:00</p>
+                        <p>Without suspension of gym membership</p>
+                        <p>Classes with a trainer in a mini-group 3 times a week</p>
+                        <p>Trainer support</p>
+                        <button>Buy</button>
+                    </div>
+
+                </div>
+                <div class="card">
+                    <div class="Title">Pass ‘In Shape (PM)’ </div>
+                    <div class="Price">$195</div>
+                    <hr>
+                    <div class="CardDetails">
+                        <p>Training in mini-groups until 17:00</p>
+                        <p>Without suspension of gym membership</p>
+                        <p>Classes with a trainer in a mini-group 3 times a week</p>
+                        <p>Trainer support</p>
+                        <button>Buy</button>
+                    </div>
+
+                </div>
+            </div>
+        </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
 </body>
